@@ -1,25 +1,25 @@
 package com.flagfinder.service.impl;
 
-import com.flagfinder.dto.GameDto;
-import com.flagfinder.dto.GameStartRequestDto;
-import com.flagfinder.dto.GuessRequestDto;
-import com.flagfinder.dto.GuessResponseDto;
-import com.flagfinder.dto.RoundSummaryDto;
-import com.flagfinder.dto.CountryDto;
-import com.flagfinder.dto.GuessDto;
+import com.flagfinder.dto.*;
+import com.flagfinder.enumeration.Continent;
 import com.flagfinder.enumeration.GameStatus;
 import com.flagfinder.enumeration.RoomStatus;
 import com.flagfinder.mapper.GameMapper;
 import com.flagfinder.mapper.RoundMapper;
+import com.flagfinder.mapper.SinglePlayerGameMapper;
+import com.flagfinder.mapper.SinglePlayerRoundMapper;
 import com.flagfinder.model.*;
 import com.flagfinder.repository.*;
 import com.flagfinder.service.CountryService;
 import com.flagfinder.service.GameService;
 import com.flagfinder.service.GameTimerService;
+import com.flagfinder.service.UserService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.Hibernate;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -38,21 +38,33 @@ import java.util.stream.Collectors;
 public class GameServiceImpl implements GameService {
     
     private final GameRepository gameRepository;
+    private final SinglePlayerGameRepository singlePlayerGameRepository;
     private final UserRepository userRepository;
     private final RoomRepository roomRepository;
+    private final SinglePlayerRoomRepository singlePlayerRoomRepository;
     private final CountryRepository countryRepository;
     private final CountryService countryService;
     private final RoundRepository roundRepository;
+    private final SinglePlayerRoundRepository singlePlayerRoundRepository;
     private final GuessRepository guessRepository;
     
     private final GameTimerService gameTimerService;
+    private final UserService userService;
     private final GameMapper gameMapper;
+    private final SinglePlayerGameMapper singlePlayerGameMapper;
     private final RoundMapper roundMapper;
+    private final SinglePlayerRoundMapper singlePlayerRoundMapper;
     private final SimpMessagingTemplate messagingTemplate;
-    
-    private static final int TOTAL_ROUNDS = 5;
-    private static final int ROUND_DURATION_SECONDS = 7;
+    private final org.springframework.transaction.support.TransactionTemplate transactionTemplate;
+
+    private static final int TOTAL_ROUNDS = 3;
+    private static final int ROUND_DURATION_SECONDS = 12;
     private static final int TOTAL_RECENT_GAMES = 10;
+    private static final String QUEUE_ROUND_STARTED = "/queue/round-started";
+    private static final String QUEUE_GAME_STARTED = "/queue/game-started";
+    private static final String QUEUE_GAME_ENDED = "/queue/game-ended";
+    private static final String GAME_NOT_FOUND = "Game not found";
+
     
     @Override
     public Game getGame(UUID gameId) {
@@ -61,11 +73,37 @@ public class GameServiceImpl implements GameService {
     }
     
     @Override
-    public List<Game> getGamesByUser(String userName) {
-        return gameRepository.findAll().stream()
-                .filter(game -> game.getUsers().stream()
-                        .anyMatch(user -> userName.equals(user.getGameName())))
+    public List<CompletedGameDto> getGamesByUser() {
+        String userName = userService.getUserFromAuthentication().getGameName();
+
+        return gameRepository.findAllMultiplayerByUser(userName).stream()
+                .map(gameMapper::gameToCompletedGameDto)
                 .toList();
+    }
+    
+    @Override
+    public Page<CompletedGameDto> getGamesByUser(Integer page, Integer pageSize) {
+        String userName = userService.getUserFromAuthentication().getGameName();
+        Page<Game> resultPage = gameRepository.findAllMultiplayerByUser(userName, PageRequest.of(page, pageSize));
+        List<Game> games = resultPage.getContent();
+        
+        List<CompletedGameDto> completedGameDtos = games.stream()
+                .map(gameMapper::gameToCompletedGameDto)
+                .toList();
+        
+        return new PageImpl<>(completedGameDtos, resultPage.getPageable(), resultPage.getTotalElements());
+    }
+    
+    @Override
+    public Long getWonGamesCount() {
+        String userName = userService.getUserFromAuthentication().getGameName();
+        return gameRepository.countWonGamesByUser(userName);
+    }
+    
+    @Override
+    public Long getDrawGamesCount() {
+        String userName = userService.getUserFromAuthentication().getGameName();
+        return gameRepository.countDrawGamesByUser(userName);
     }
     
     @Override
@@ -100,10 +138,10 @@ public class GameServiceImpl implements GameService {
         game.setUsers(Arrays.asList(room.getHost(), room.getGuest()));
         game.setHostScore(0);
         game.setGuestScore(0);
-        game.setTotalRounds(TOTAL_ROUNDS);
         game.setStatus(GameStatus.IN_PROGRESS);
         game.setStartedAt(LocalDateTime.now());
         game.setContinents(continents != null ? continents : new ArrayList<>());
+        game.setTotalRounds(TOTAL_ROUNDS);
         
         Game savedGame = gameRepository.save(game);
         
@@ -113,12 +151,13 @@ public class GameServiceImpl implements GameService {
         startNewRound(savedGame, 1, continents);
 
         GameDto gameDto = gameMapper.gameToGameDto(savedGame);
+
         populateCurrentRoundData(gameDto, savedGame);
         
         try {
             messagingTemplate.convertAndSendToUser(
                     room.getHost().getGameName(),
-                    "/queue/game-started",
+                    QUEUE_GAME_STARTED,
                     gameDto
             );
         } catch (Exception e) {
@@ -128,7 +167,7 @@ public class GameServiceImpl implements GameService {
         try {
             messagingTemplate.convertAndSendToUser(
                     room.getGuest().getGameName(),
-                    "/queue/game-started",
+                    QUEUE_GAME_STARTED,
                     gameDto
             );
         } catch (Exception e) {
@@ -137,12 +176,76 @@ public class GameServiceImpl implements GameService {
         
         return gameDto;
     }
-    
+
+    @Override
+    public SinglePlayerGameDto startSinglePlayerGame(UUID roomId, List<Continent> continents) {
+        SinglePlayerRoom singlePlayerRoom = singlePlayerRoomRepository.findById(roomId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Room not found"));
+
+        if (singlePlayerRoom.getHost() == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Room doesn't have a host");
+        }
+
+        if (singlePlayerRoom.getStatus() != com.flagfinder.enumeration.RoomStatus.ROOM_READY_FOR_START) {
+            singlePlayerRoom.setStatus(com.flagfinder.enumeration.RoomStatus.ROOM_READY_FOR_START);
+            singlePlayerRoomRepository.save(singlePlayerRoom);
+        }
+
+        SinglePlayerGame singlePlayerGame = new SinglePlayerGame();
+        singlePlayerGame.setSinglePlayerRoom(singlePlayerRoom);
+        singlePlayerGame.setUser(singlePlayerRoom.getHost());
+        singlePlayerGame.setHostScore(0);
+        singlePlayerGame.setStatus(GameStatus.IN_PROGRESS);
+        singlePlayerGame.setStartedAt(LocalDateTime.now());
+        singlePlayerGame.setContinents(continents != null ? continents : new ArrayList<>());
+        singlePlayerGame.setTotalRounds(TOTAL_ROUNDS);
+
+        singlePlayerGameRepository.save(singlePlayerGame);
+
+        singlePlayerRoom.setStatus(com.flagfinder.enumeration.RoomStatus.GAME_IN_PROGRESS);
+        singlePlayerRoomRepository.save(singlePlayerRoom);
+
+        startNewSinglePlayerRound(singlePlayerGame, 1, continents);
+
+        SinglePlayerGameDto singlePlayerGameDto = singlePlayerGameMapper.singlePlayerGameToSinglePlayerGameDto(singlePlayerGame);
+
+        populateCurrentSinglePlayerRoundData(singlePlayerGameDto, singlePlayerGame);
+
+        try {
+            messagingTemplate.convertAndSendToUser(
+                    singlePlayerRoom.getHost().getGameName(),
+                    QUEUE_GAME_STARTED,
+                    singlePlayerGameDto
+            );
+        } catch (Exception e) {
+            log.error("Failed to send game-started notification to host {}: {}", singlePlayerRoom.getHost().getGameName(), e.getMessage(), e);
+        }
+
+        return singlePlayerGameDto;
+    }
+
     @Override
     @Transactional
     public GuessResponseDto submitGuess(GuessRequestDto guessRequest) {
-        Game game = gameRepository.findByIdWithRelations(guessRequest.getGameId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
+        Game game = null;
+        SinglePlayerGame singlePlayerGame = null;
+        
+        try {
+            game = gameRepository.findByIdWithRelations(guessRequest.getGameId())
+                    .orElse(null);
+        } catch (Exception e) {
+        }
+        
+        if (game == null) {
+            singlePlayerGame = singlePlayerGameRepository.findByIdWithRelations(guessRequest.getGameId())
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND));
+            
+            if (singlePlayerGame.getStatus() != GameStatus.IN_PROGRESS) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Game is not in progress");
+            }
+            
+            return submitSinglePlayerGuess(guessRequest, singlePlayerGame);
+        }
         
         if (game.getStatus() != GameStatus.IN_PROGRESS) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Game is not in progress");
@@ -183,7 +286,6 @@ public class GameServiceImpl implements GameService {
         
         if (currentRound.getGuesses().size() >= 2 || shouldEndRound(currentRound)) {
             log.info("Ending round {} - both players guessed or timeout", currentRound.getRoundNumber());
-            // Explicitly initialize collections before calling endCurrentRound
             Hibernate.initialize(game.getUsers());
             Hibernate.initialize(game.getRounds());
             if (game.getRoom() != null) {
@@ -193,11 +295,10 @@ public class GameServiceImpl implements GameService {
         } else {
             log.info("Round {} continues - only {} guesses so far", currentRound.getRoundNumber(), currentRound.getGuesses().size());
         }
-        
+
         GameDto gameDto = gameMapper.gameToGameDto(gameRepository.save(game));
         populateCurrentRoundData(gameDto, game);
-        
-        // Create guess response with feedback
+
         GuessResponseDto response = new GuessResponseDto();
         response.setGame(gameDto);
         response.setCorrect(guess.isCorrect());
@@ -217,9 +318,8 @@ public class GameServiceImpl implements GameService {
     @Transactional
     public GameDto getGameState(UUID gameId) {
         Game game = gameRepository.findByIdWithRelations(gameId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND));
         
-        // Explicitly initialize collections
         Hibernate.initialize(game.getUsers());
         Hibernate.initialize(game.getRounds());
         if (game.getRoom() != null) {
@@ -235,9 +335,8 @@ public class GameServiceImpl implements GameService {
     @Transactional
     public GameDto endGame(UUID gameId) {
         Game game = gameRepository.findByIdWithRelations(gameId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND));
         
-        // Explicitly initialize collections
         Hibernate.initialize(game.getUsers());
         Hibernate.initialize(game.getRounds());
         if (game.getRoom() != null) {
@@ -263,12 +362,11 @@ public class GameServiceImpl implements GameService {
         
         GameDto gameDto = gameMapper.gameToGameDto(gameRepository.save(game));
         populateCurrentRoundData(gameDto, game);
-        
-        // Send WebSocket notification for game completion
+
         try {
             messagingTemplate.convertAndSendToUser(
                     room.getHost().getGameName(),
-                    "/queue/game-ended",
+                    QUEUE_GAME_ENDED,
                     gameDto
             );
         } catch (Exception e) {
@@ -278,7 +376,7 @@ public class GameServiceImpl implements GameService {
         try {
             messagingTemplate.convertAndSendToUser(
                     room.getGuest().getGameName(),
-                    "/queue/game-ended",
+                    QUEUE_GAME_ENDED,
                     gameDto
             );
         } catch (Exception e) {
@@ -303,18 +401,15 @@ public class GameServiceImpl implements GameService {
         round.setCountry(randomCountry);
         round.setRoundNumber(roundNumber);
         
-        // Cancel any existing timers for this game before starting new one
         log.info("Cancelling existing timers for game {}", game.getId());
         gameTimerService.cancelGameTimers(game.getId());
         roundRepository.save(round);
         log.info("Starting timer for game {} round {} with duration {} seconds", game.getId(), roundNumber, ROUND_DURATION_SECONDS);
         gameTimerService.startRoundTimer(game.getId(), roundNumber, ROUND_DURATION_SECONDS);
         
-        // Refresh game entity to include the new round with all relations
         Game refreshedGame = gameRepository.findByIdWithRelations(game.getId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND));
         
-        // Initialize collections for WebSocket notification
         Hibernate.initialize(refreshedGame.getUsers());
         Hibernate.initialize(refreshedGame.getRounds());
         if (refreshedGame.getRoom() != null) {
@@ -324,14 +419,13 @@ public class GameServiceImpl implements GameService {
         GameDto gameDto = gameMapper.gameToGameDto(refreshedGame);
         populateCurrentRoundData(gameDto, refreshedGame);
         Room room = refreshedGame.getRoom();
-        
-        // Send WebSocket notifications for round start
-        log.info("Sending WebSocket notifications for round {} start to host {} and guest {}", 
+
+        log.info("Sending WebSocket notifications for round {} start to host {} and guest {}",
                 roundNumber, room.getHost().getGameName(), room.getGuest().getGameName());
         try {
             messagingTemplate.convertAndSendToUser(
                     room.getHost().getGameName(),
-                    "/queue/round-started",
+                    QUEUE_ROUND_STARTED,
                     gameDto
             );
             log.info("Successfully sent round-started notification to host {} for round {}", room.getHost().getGameName(), roundNumber);
@@ -342,12 +436,54 @@ public class GameServiceImpl implements GameService {
         try {
             messagingTemplate.convertAndSendToUser(
                     room.getGuest().getGameName(),
-                    "/queue/round-started",
+                    QUEUE_ROUND_STARTED,
                     gameDto
             );
             log.info("Successfully sent round-started notification to guest {} for round {}", room.getGuest().getGameName(), roundNumber);
         } catch (Exception e) {
             log.error("Failed to send round-started notification to guest {}: {}", room.getGuest().getGameName(), e.getMessage(), e);
+        }
+    }
+
+    private void startNewSinglePlayerRound(SinglePlayerGame singlePlayerGame, int roundNumber, List<com.flagfinder.enumeration.Continent> continents) {
+
+        Country randomCountry;
+        if (continents != null && !continents.isEmpty()) {
+            randomCountry = countryService.getRandomCountryFromAnyContinents(continents);
+        } else {
+            randomCountry = countryService.getRandomCountryFromAnyContinents(null);
+        }
+
+        SinglePlayerRound singlePlayerRound = new SinglePlayerRound();
+        singlePlayerRound.setSinglePlayerGame(singlePlayerGame);
+        singlePlayerRound.setCountry(randomCountry);
+        singlePlayerRound.setRoundNumber(roundNumber);
+
+        gameTimerService.cancelGameTimers(singlePlayerGame.getId());
+        singlePlayerRoundRepository.save(singlePlayerRound);
+        gameTimerService.startRoundTimer(singlePlayerGame.getId(), roundNumber, ROUND_DURATION_SECONDS);
+
+        SinglePlayerGame refreshedGame = singlePlayerGameRepository.findByIdWithRelations(singlePlayerGame.getId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND));
+
+        Hibernate.initialize(refreshedGame.getUser());
+        Hibernate.initialize(refreshedGame.getRounds());
+        if (refreshedGame.getSinglePlayerRoom() != null) {
+            Hibernate.initialize(refreshedGame.getSinglePlayerRoom());
+        }
+
+        SinglePlayerGameDto singlePlayerGameDto = singlePlayerGameMapper.singlePlayerGameToSinglePlayerGameDto(refreshedGame);
+        populateCurrentSinglePlayerRoundData(singlePlayerGameDto, refreshedGame);
+        SinglePlayerRoom singlePlayerRoom = refreshedGame.getSinglePlayerRoom();
+
+        try {
+            messagingTemplate.convertAndSendToUser(
+                    singlePlayerRoom.getHost().getGameName(),
+                    QUEUE_ROUND_STARTED,
+                    singlePlayerGameDto
+            );
+        } catch (Exception e) {
+            log.error("Failed to send round-started notification to host {}: {}", singlePlayerRoom.getHost().getGameName(), e.getMessage(), e);
         }
     }
     
@@ -366,21 +502,85 @@ public class GameServiceImpl implements GameService {
     public void handleRoundTimeout(UUID gameId, Integer roundNumber) {
         try {
             log.info("Handling timeout for game {} round {}", gameId, roundNumber);
+            
             Game game = gameRepository.findByIdWithRelations(gameId).orElse(null);
             if (game != null && game.getStatus() == GameStatus.IN_PROGRESS) {
-                // Explicitly initialize lazy collections to prevent LazyInitializationException
                 Hibernate.initialize(game.getUsers());
                 Hibernate.initialize(game.getRounds());
                 if (game.getRoom() != null) {
                     Hibernate.initialize(game.getRoom());
                 }
                 endCurrentRound(game, roundNumber);
+                return;
+            }
+
+            SinglePlayerGame singlePlayerGame = singlePlayerGameRepository.findByIdWithRelations(gameId).orElse(null);
+            if (singlePlayerGame != null && singlePlayerGame.getStatus() == GameStatus.IN_PROGRESS) {
+                Hibernate.initialize(singlePlayerGame.getUser());
+                Hibernate.initialize(singlePlayerGame.getRounds());
+                if (singlePlayerGame.getSinglePlayerRoom() != null) {
+                    Hibernate.initialize(singlePlayerGame.getSinglePlayerRoom());
+                }
+                endCurrentSinglePlayerRound(singlePlayerGame, roundNumber);
             }
         } catch (Exception e) {
             log.error("Error handling round timeout for game {} round {}", gameId, roundNumber, e);
         }
     }
     
+    private void endCurrentSinglePlayerRound(SinglePlayerGame singlePlayerGame, int roundNumber) {
+        log.info("Ending single player round {} for game {}, total rounds: {}", roundNumber, singlePlayerGame.getId(), TOTAL_ROUNDS);
+        
+        if (roundNumber < TOTAL_ROUNDS) {
+            log.info("Starting new single player round {} for game {}", roundNumber + 1, singlePlayerGame.getId());
+            startNewSinglePlayerRound(singlePlayerGame, roundNumber + 1, singlePlayerGame.getContinents());
+        } else {
+            log.info("Final single player round completed, ending game {}", singlePlayerGame.getId());
+            endSinglePlayerGame(singlePlayerGame.getId());
+        }
+    }
+    
+    private void endSinglePlayerGame(UUID gameId) {
+        log.info("Ending single player game {}", gameId);
+        
+        SinglePlayerGame singlePlayerGame = singlePlayerGameRepository.findByIdWithRelations(gameId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Single player game not found"));
+        
+        Hibernate.initialize(singlePlayerGame.getUser());
+        Hibernate.initialize(singlePlayerGame.getRounds());
+        if (singlePlayerGame.getSinglePlayerRoom() != null) {
+            Hibernate.initialize(singlePlayerGame.getSinglePlayerRoom());
+        }
+        
+        singlePlayerGame.setStatus(GameStatus.COMPLETED);
+        singlePlayerGame.setEndedAt(LocalDateTime.now());
+        log.info("Single player game {} set to COMPLETED status", gameId);
+
+        SinglePlayerRoom singlePlayerRoom = singlePlayerGame.getSinglePlayerRoom();
+        if (singlePlayerRoom != null) {
+            singlePlayerRoom.setStatus(RoomStatus.GAME_COMPLETED);
+            singlePlayerRoomRepository.save(singlePlayerRoom);
+        }
+        gameTimerService.cancelGameTimers(gameId);
+        
+        singlePlayerGameRepository.save(singlePlayerGame);
+        
+        SinglePlayerGameDto singlePlayerGameDto = singlePlayerGameMapper.singlePlayerGameToSinglePlayerGameDto(singlePlayerGame);
+        
+        try {
+            messagingTemplate.convertAndSendToUser(
+                    singlePlayerRoom.getHost().getGameName(),
+                    QUEUE_GAME_ENDED,
+                    singlePlayerGameDto
+            );
+            log.info("Successfully sent game-ended notification to host {} for single player game {}", 
+                    singlePlayerRoom.getHost().getGameName(), gameId);
+        } catch (Exception e) {
+            log.error("Failed to send game-ended notification to host {}: {}", 
+                    singlePlayerRoom.getHost().getGameName(), e.getMessage(), e);
+        }
+    }
+
     private void updateScore(Game game, User user) {
         if (game.getUsers().get(0).equals(user)) {
             game.setHostScore(game.getHostScore() + 1);
@@ -388,18 +588,17 @@ public class GameServiceImpl implements GameService {
             game.setGuestScore(game.getGuestScore() + 1);
         }
     }
-    
+
     private boolean shouldEndRound(Round round) {
-        return round.getGuesses().size() >= 2;
+        return round.getGuesses().size() >= TOTAL_ROUNDS;
     }
-    
+
     private void populateCurrentRoundData(GameDto dto, Game game) {
         if (!game.getRounds().isEmpty()) {
-            // Find the round with the highest round number (most recent round)
             Round currentRound = game.getRounds().stream()
                     .max((r1, r2) -> Integer.compare(r1.getRoundNumber(), r2.getRoundNumber()))
                     .orElse(game.getRounds().get(0));
-            
+
             dto.setCurrentRound(currentRound.getRoundNumber());
             
             com.flagfinder.dto.RoundDto roundDto = roundMapper.roundToRoundDto(currentRound);
@@ -409,12 +608,42 @@ public class GameServiceImpl implements GameService {
             dto.setCurrentRoundData(roundDto);
         }
     }
+
+    private void populateCurrentSinglePlayerRoundData(SinglePlayerGameDto dto, SinglePlayerGame game) {
+        if (!game.getRounds().isEmpty()) {
+            SinglePlayerRound currentSinglePlayerRound = null;
+
+            for (SinglePlayerRound round : game.getRounds()) {
+                if (gameTimerService.isRoundActive(game.getId(), round.getRoundNumber())) {
+                    currentSinglePlayerRound = round;
+                    break;
+                }
+            }
+            
+            if (currentSinglePlayerRound == null) {
+                currentSinglePlayerRound = game.getRounds().stream()
+                        .max((r1, r2) -> Integer.compare(r1.getRoundNumber(), r2.getRoundNumber()))
+                        .orElse(game.getRounds().get(0));
+            }
+
+            dto.setCurrentRound(currentSinglePlayerRound.getRoundNumber());
+
+            SinglePlayerRoundDto roundDto = singlePlayerRoundMapper.singlePlayerRoundToSinglePlayerRoundDto(currentSinglePlayerRound);
+            boolean isRoundActive = gameTimerService.isRoundActive(game.getId(), currentSinglePlayerRound.getRoundNumber());
+            Long timeRemaining = gameTimerService.getRemainingTime(game.getId(), currentSinglePlayerRound.getRoundNumber());
+            
+            roundDto.setRoundActive(isRoundActive);
+            roundDto.setTimeRemaining(timeRemaining);
+
+            dto.setCurrentSinglePlayerRoundData(roundDto);
+        }
+    }
     
     @Override
     @Transactional
     public List<Round> getGameRounds(UUID gameId) {
         gameRepository.findById(gameId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND));
 
         List<Round> rounds = roundRepository.findByGameIdOrderByRoundNumber(gameId);
 
@@ -433,11 +662,22 @@ public class GameServiceImpl implements GameService {
     @Override
     @Transactional
     public List<RoundSummaryDto> getGameRoundSummaries(UUID gameId) {
-        gameRepository.findById(gameId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
-
-        List<Round> rounds = roundRepository.findByGameIdOrderByRoundNumber(gameId);
-
+        Optional<Game> multiplayerGame = gameRepository.findById(gameId);
+        if (multiplayerGame.isPresent()) {
+            List<Round> rounds = roundRepository.findByGameIdOrderByRoundNumber(gameId);
+            return mapMultiplayerRoundsToSummary(rounds);
+        }
+        
+        Optional<SinglePlayerGame> singlePlayerGame = singlePlayerGameRepository.findById(gameId);
+        if (singlePlayerGame.isPresent()) {
+            List<SinglePlayerRound> rounds = singlePlayerRoundRepository.findByGameIdOrderByRoundNumber(gameId);
+            return mapSinglePlayerRoundsToSummary(rounds);
+        }
+        
+        throw new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND);
+    }
+    
+    private List<RoundSummaryDto> mapMultiplayerRoundsToSummary(List<Round> rounds) {
         return rounds.stream().map(round -> {
             RoundSummaryDto dto = new RoundSummaryDto();
             dto.setRoundNumber(round.getRoundNumber());
@@ -455,11 +695,37 @@ public class GameServiceImpl implements GameService {
                     guessDto.setGuessedCountryName(guess.getGuessedCountry().getNameOfCounty());
                 }
                 return guessDto;
-            }).collect(Collectors.toList());
+            }).toList();
             
             dto.setGuesses(guessDtos);
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
+    }
+    
+    private List<RoundSummaryDto> mapSinglePlayerRoundsToSummary(List<SinglePlayerRound> rounds) {
+        return rounds.stream().map(round -> {
+            RoundSummaryDto dto = new RoundSummaryDto();
+            dto.setRoundNumber(round.getRoundNumber());
+
+            CountryDto countryDto = new CountryDto();
+            countryDto.setId(round.getCountry().getId());
+            countryDto.setNameOfCounty(round.getCountry().getNameOfCounty());
+            dto.setCountry(countryDto);
+
+            List<GuessDto> guessDtos = new ArrayList<>();
+            if (round.getGuess() != null) {
+                GuessDto guessDto = new GuessDto();
+                guessDto.setUserGameName(round.getGuess().getUser().getGameName());
+                guessDto.setCorrect(round.getGuess().isCorrect());
+                if (round.getGuess().getGuessedCountry() != null) {
+                    guessDto.setGuessedCountryName(round.getGuess().getGuessedCountry().getNameOfCounty());
+                }
+                guessDtos.add(guessDto);
+            }
+            
+            dto.setGuesses(guessDtos);
+            return dto;
+        }).toList();
     }
 
     @Override
@@ -481,7 +747,7 @@ public class GameServiceImpl implements GameService {
         long correctGuesses = rounds.stream()
                 .map(round -> new AbstractMap.SimpleEntry<>(round,
                         guessRepository.findOneByRoundIdAndGameName(round.getId(), userName)))
-                .filter(entry -> entry.getValue() != null) // ignore rounds without a guess
+                .filter(entry -> entry.getValue() != null)
                 .filter(entry -> entry.getValue().getGuessedCountry().equals(entry.getKey().getCountry()))
                 .count();
 
@@ -490,5 +756,118 @@ public class GameServiceImpl implements GameService {
         return totalGuesses > 0
                     ? (int) ((correctGuesses * 100.0) / totalGuesses)
                     : 0;
+    }
+
+    private GuessResponseDto submitSinglePlayerGuess(GuessRequestDto guessRequest, SinglePlayerGame singlePlayerGame) {
+        String currentUserName = SecurityContextHolder.getContext().getAuthentication().getName();
+        User currentUser = userRepository.findByEmail(currentUserName)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
+        SinglePlayerRound currentRound = singlePlayerGame.getRounds().stream()
+                .filter(round -> round.getRoundNumber().equals(guessRequest.getRoundNumber()))
+                .findFirst()
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Round not found"));
+        
+        if (currentRound.getGuess() != null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Already guessed in this round");
         }
+        Country guessedCountry = countryRepository.findByNameOfCountyIgnoreCase(guessRequest.getGuessedCountryName())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid country name: " + guessRequest.getGuessedCountryName()));
+
+        Guess guess = new Guess();
+        guess.setUser(currentUser);
+        guess.setGuessedCountry(guessedCountry);
+        guess.setSinglePlayerRound(currentRound);
+
+        boolean isCorrect = guessedCountry.equals(currentRound.getCountry());
+        guess.setCorrect(isCorrect);
+
+        guessRepository.save(guess);
+        currentRound.setGuess(guess);
+        singlePlayerRoundRepository.save(currentRound);
+        
+        if (isCorrect) {
+            singlePlayerGame.setHostScore(singlePlayerGame.getHostScore() + 1);
+        }
+
+        int currentRoundNumber = guessRequest.getRoundNumber();
+        UUID gameId = singlePlayerGame.getId();
+        List<Continent> continents = new ArrayList<>(singlePlayerGame.getContinents());
+
+        java.util.concurrent.Executors.newSingleThreadScheduledExecutor().schedule(() -> {
+            transactionTemplate.execute(status -> {
+                try {
+                    if (currentRoundNumber < TOTAL_ROUNDS) {
+                        SinglePlayerGame game = singlePlayerGameRepository.findByIdWithRelations(gameId)
+                                .orElse(null);
+                        if (game != null && game.getStatus() == GameStatus.IN_PROGRESS) {
+                            startNewSinglePlayerRound(game, currentRoundNumber + 1, continents);
+                        }
+                    } else {
+                        SinglePlayerGame game = singlePlayerGameRepository.findById(gameId).orElse(null);
+                        if (game != null) {
+                            game.setStatus(GameStatus.COMPLETED);
+                            game.setEndedAt(LocalDateTime.now());
+                            singlePlayerGameRepository.save(game);
+                        }
+                    }
+                } catch (Exception e) {
+                    log.error("Error in delayed single player game progression for game {}", gameId, e);
+                }
+                return null;
+            });
+        }, 1, java.util.concurrent.TimeUnit.SECONDS);
+
+        singlePlayerGameRepository.save(singlePlayerGame);
+        
+        SinglePlayerGame refreshedGame = singlePlayerGameRepository.findByIdWithRelations(singlePlayerGame.getId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, GAME_NOT_FOUND));
+
+        SinglePlayerGameDto gameDto = singlePlayerGameMapper.singlePlayerGameToSinglePlayerGameDto(refreshedGame);
+        populateCurrentSinglePlayerRoundData(gameDto, refreshedGame);
+
+        GuessResponseDto response = new GuessResponseDto();
+        response.setCorrect(isCorrect);
+        response.setMessage(isCorrect ? "Correct!" : "Incorrect. The correct answer was " + currentRound.getCountry().getNameOfCounty());
+        response.setPointsAwarded(isCorrect ? 1 : 0);
+        response.setGame(gameDto);
+
+        return response;
+    }
+
+    @Override
+    public SinglePlayerGameDto getSinglePlayerGameByRoom(UUID roomId) {
+        SinglePlayerRoom singlePlayerRoom = singlePlayerRoomRepository.findById(roomId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Single player room not found"));
+        
+        SinglePlayerGame singlePlayerGame = singlePlayerGameRepository.findBySinglePlayerRoom(singlePlayerRoom)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Single player game not found for room"));
+        
+        Hibernate.initialize(singlePlayerGame.getUser());
+        Hibernate.initialize(singlePlayerGame.getRounds());
+        if (singlePlayerGame.getSinglePlayerRoom() != null) {
+            Hibernate.initialize(singlePlayerGame.getSinglePlayerRoom());
+        }
+        
+        SinglePlayerGameDto singlePlayerGameDto = singlePlayerGameMapper.singlePlayerGameToSinglePlayerGameDto(singlePlayerGame);
+        populateCurrentSinglePlayerRoundData(singlePlayerGameDto, singlePlayerGame);
+        
+        return singlePlayerGameDto;
+    }
+
+    @Override
+    public SinglePlayerGameDto getSinglePlayerGameById(UUID gameId) {
+        SinglePlayerGame singlePlayerGame = singlePlayerGameRepository.findByIdWithRelations(gameId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Single player game not found"));
+        
+        Hibernate.initialize(singlePlayerGame.getUser());
+        Hibernate.initialize(singlePlayerGame.getRounds());
+        if (singlePlayerGame.getSinglePlayerRoom() != null) {
+            Hibernate.initialize(singlePlayerGame.getSinglePlayerRoom());
+        }
+        
+        SinglePlayerGameDto singlePlayerGameDto = singlePlayerGameMapper.singlePlayerGameToSinglePlayerGameDto(singlePlayerGame);
+        populateCurrentSinglePlayerRoundData(singlePlayerGameDto, singlePlayerGame);
+        
+        return singlePlayerGameDto;
+    }
 }
